<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:text="@string/first_screen"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:ems="1"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>
 
    <Button
        android:id="@+id/buttonClick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnClick" />
</LinearLayout>
